--- a/rustdesk/index.html
+++ b/rustdesk/index.html
@@ -156,7 +156,7 @@
     .carousel {
         position: relative;
         max-width: 600px;
-        margin: 30px auto;
+        margin: 0 auto;
         overflow: hidden;
         border-radius: 12px;
         border: 1px solid rgba(0,0,0,0.05);
@@ -207,21 +207,22 @@
     /* Layout principal con carrusel central y columnas de productos */
     .main-content {
         display: flex;
-        justify-content: center;
+        justify-content: space-between; /* columnas a los laterales */
         align-items: flex-start;
         gap: 20px;
-        margin-top: 30px;
+        margin-top: 20px; /* debajo de la cinta */
         flex-wrap: wrap;
+        padding: 0 20px; /* margen lateral */
     }
 
     .products-column {
-        flex: 1;
-        max-width: 250px;
+        flex: 0 0 220px; /* un poco más angosta si es necesario */
     }
 
     .carousel-wrapper {
         flex: 1;
         max-width: 600px;
+        margin: 0 auto;
     }
 
     /* Productos */
