--- a/rustdesk/index.html
+++ b/rustdesk/index.html
@@ -210,7 +210,7 @@
         justify-content: space-between; /* columnas a los laterales */
         align-items: flex-start;
         gap: 20px;
-        margin-top: 20px; /* debajo de la cinta */
+        margin-top: 50px; /* justo debajo de la cinta */
         flex-wrap: wrap;
         padding: 0 20px; /* margen lateral */
     }
@@ -287,27 +287,7 @@
   </div>
 </div>
 
-<img src="flecha-arriba.gif" alt="" class="arrow-top" id="downloadGif">
-
-<p class="backup-text">Respaldado por:</p>
-<img src="logo.png" alt="RobertSoftware" class="logo">
-
-<h1>RustDesk</h1>
-<p class="message">
-    Seleccione su sistema operativo para iniciar la descarga de RustDesk.
-</p>
-
-<a href="https://github.com/rustdesk/rustdesk/releases/download/1.4.2/rustdesk-1.4.2-x86_64.exe" 
-   class="download-link" id="btnWin">
-   <img src="windows.svg" alt="Windows"> Descargar para Windows
-</a>
-
-<a href="https://github.com/rustdesk/rustdesk/releases/download/1.4.2/rustdesk-1.4.2-x86_64.dmg" 
-   class="download-link" id="btnMac">
-   <img src="macos.svg" alt="macOS"> Descargar para macOS
-</a>
-
-<!-- MAIN CONTENT: columnas de productos y carrusel central -->
+<!-- MAIN CONTENT: columnas de productos y carrusel central justo debajo de la cinta -->
 <div class="main-content">
 
     <!-- Columna izquierda -->
@@ -396,6 +376,26 @@
     </div>
 
 </div>
+
+<img src="flecha-arriba.gif" alt="" class="arrow-top" id="downloadGif">
+
+<p class="backup-text">Respaldado por:</p>
+<img src="logo.png" alt="RobertSoftware" class="logo">
+
+<h1>RustDesk</h1>
+<p class="message">
+    Seleccione su sistema operativo para iniciar la descarga de RustDesk.
+</p>
+
+<a href="https://github.com/rustdesk/rustdesk/releases/download/1.4.2/rustdesk-1.4.2-x86_64.exe" 
+   class="download-link" id="btnWin">
+   <img src="windows.svg" alt="Windows"> Descargar para Windows
+</a>
+
+<a href="https://github.com/rustdesk/rustdesk/releases/download/1.4.2/rustdesk-1.4.2-x86_64.dmg" 
+   class="download-link" id="btnMac">
+   <img src="macos.svg" alt="macOS"> Descargar para macOS
+</a>
 
 <script>
     const gif = document.getElementById('downloadGif');
