--- a/rustdesk/index.html
+++ b/rustdesk/index.html
@@ -204,19 +204,18 @@
         right: 10px;
     }
 
-    /* Layout principal con carrusel central y columnas de productos */
     .main-content {
         display: flex;
-        justify-content: space-between; /* columnas a los laterales */
+        justify-content: space-between;
         align-items: flex-start;
         gap: 20px;
-        margin-top: 50px; /* justo debajo de la cinta */
+        margin-top: 30px;
         flex-wrap: wrap;
-        padding: 0 20px; /* margen lateral */
+        padding: 0 20px;
     }
 
     .products-column {
-        flex: 0 0 220px; /* un poco más angosta si es necesario */
+        flex: 0 0 220px;
     }
 
     .carousel-wrapper {
@@ -225,7 +224,6 @@
         margin: 0 auto;
     }
 
-    /* Productos */
     .product {
         margin-bottom: 20px;
         text-align: left;
@@ -287,7 +285,27 @@
   </div>
 </div>
 
-<!-- MAIN CONTENT: columnas de productos y carrusel central justo debajo de la cinta -->
+<img src="flecha-arriba.gif" alt="" class="arrow-top" id="downloadGif">
+
+<p class="backup-text">Respaldado por:</p>
+<img src="logo.png" alt="RobertSoftware" class="logo">
+
+<h1>RustDesk</h1>
+<p class="message">
+    Seleccione su sistema operativo para iniciar la descarga de RustDesk.
+</p>
+
+<a href="https://github.com/rustdesk/rustdesk/releases/download/1.4.2/rustdesk-1.4.2-x86_64.exe" 
+   class="download-link" id="btnWin">
+   <img src="windows.svg" alt="Windows"> Descargar para Windows
+</a>
+
+<a href="https://github.com/rustdesk/rustdesk/releases/download/1.4.2/rustdesk-1.4.2-x86_64.dmg" 
+   class="download-link" id="btnMac">
+   <img src="macos.svg" alt="macOS"> Descargar para macOS
+</a>
+
+<!-- MAIN CONTENT: columnas y carrusel -->
 <div class="main-content">
 
     <!-- Columna izquierda -->
@@ -377,26 +395,6 @@
 
 </div>
 
-<img src="flecha-arriba.gif" alt="" class="arrow-top" id="downloadGif">
-
-<p class="backup-text">Respaldado por:</p>
-<img src="logo.png" alt="RobertSoftware" class="logo">
-
-<h1>RustDesk</h1>
-<p class="message">
-    Seleccione su sistema operativo para iniciar la descarga de RustDesk.
-</p>
-
-<a href="https://github.com/rustdesk/rustdesk/releases/download/1.4.2/rustdesk-1.4.2-x86_64.exe" 
-   class="download-link" id="btnWin">
-   <img src="windows.svg" alt="Windows"> Descargar para Windows
-</a>
-
-<a href="https://github.com/rustdesk/rustdesk/releases/download/1.4.2/rustdesk-1.4.2-x86_64.dmg" 
-   class="download-link" id="btnMac">
-   <img src="macos.svg" alt="macOS"> Descargar para macOS
-</a>
-
 <script>
     const gif = document.getElementById('downloadGif');
 
@@ -476,7 +474,6 @@
     });
 
     track.addEventListener('touchend', () => { isDragging = false; });
-
 </script>
 
 <footer>
