--- a/rustdesk/index.html
+++ b/rustdesk/index.html
@@ -19,12 +19,12 @@
 
     .logo {
         max-width: 180px;
-        margin-bottom: 10px;
+        margin: 10px 0;
     }
 
     .backup-text {
         font-size: 14px;
-        margin-bottom: 20px;
+        margin-bottom: 10px;
         color: #555;
     }
 
@@ -174,23 +174,18 @@
     .carousel-arrow-left { left: 10px; }
     .carousel-arrow-right { right: 10px; }
 
-    /* ====== MAIN CONTENT ====== */
-    .main-content {
+    /* ====== PRODUCTOS DEBAJO DEL CARRUSEL ====== */
+    .products-section {
+        max-width: 900px;
+        margin: 30px auto 50px;
         display: flex;
-        justify-content: space-between;
-        align-items: flex-start;
-        gap: 20px;
-        margin-top: 30px;
         flex-wrap: wrap;
-        padding: 0 20px;
+        justify-content: center;
+        gap: 20px;
     }
 
-    .products-column { flex: 0 0 220px; }
-
-    .carousel-wrapper { flex: 1; max-width: 700px; margin: 0 auto; }
-
     .product {
-        margin-bottom: 20px;
+        width: 280px;
         text-align: left;
         background-color: #ffffff;
         border-radius: 12px;
@@ -268,13 +263,13 @@
     <img src="rustdesk-logo.png" alt="RustDesk Logo">
     <img src="solzze-logo.png" alt="Solzze Logo">
     <img src="rs-logo.png" alt="RS Logo">
-    Distribución verificada de RustDesk por Robert Software – Herramienta de conexión remota utilizada para brindar soporte técnico profesional, seguro y confiable a nuestros clientes. Descargue las versiones más recientes y certificadas para Windows y macOS.
+    Distribución verificada de RustDesk por Robert Software – Herramienta de conexión remota profesional y confiable. Descargue las versiones más recientes para Windows y macOS.
   </div>
 </div>
 
-<!-- LOGO -->
-<img src="logo.png" alt="RobertSoftware" class="logo">
+<!-- RESPALDO Y LOGO -->
 <p class="backup-text">Respaldado por:</p>
+<img src="logo.png" alt="RobertSoftware" class="logo">
 
 <h1>RustDesk</h1>
 <p class="message">Seleccione su sistema operativo para iniciar la descarga de RustDesk.</p>
@@ -291,94 +286,85 @@
 <!-- GIF FLECHA -->
 <img src="flecha-arriba.gif" alt="Descargar" class="arrow-top" id="downloadGif">
 
-<!-- MAIN CONTENT -->
-<div class="main-content">
-
-    <!-- Columna izquierda -->
-    <div class="products-column">
-        <div class="product">
-            <h3>Software Ofimático</h3>
-            <p>Soluciones de oficina completas para documentos, hojas de cálculo y presentaciones.</p>
-            <p>Precio Perú: S/. 15 | Chile: $9,500 CLP</p>
-            <a href="https://wa.me/51945482880" target="_blank" class="buy-button">
-                Comprar ahora <span class="small-note">WhatsApp</span>
-            </a>
+<!-- CARRUSEL -->
+<div class="carousel-wrapper">
+    <div class="carousel">
+        <button class="carousel-arrow carousel-arrow-left">&#10094;</button>
+        <div class="carousel-track">
+            <img src="1.jpg" alt="RustDesk 1">
+            <img src="2.png" alt="RustDesk 2">
+            <img src="3.png" alt="RustDesk 3">
+            <img src="4.png" alt="RustDesk 4">
         </div>
-        <div class="product">
-            <h3>Antivirus</h3>
-            <p>Protección de tus equipos por 1 año contra virus, malware y amenazas online.</p>
-            <p>Precio Perú: S/. 35 | Chile: $15,000 CLP</p>
-            <a href="https://wa.me/51945482880" target="_blank" class="buy-button">
-                Comprar ahora <span class="small-note">WhatsApp</span>
-            </a>
-        </div>
-        <div class="product">
-            <h3>Gestión de PDF</h3>
-            <p>Edición, creación y conversión de archivos PDF de forma permanente.</p>
-            <p>Precio Perú: S/. 15 | Chile: $9,500 CLP</p>
-            <a href="https://wa.me/51945482880" target="_blank" class="buy-button">
-                Comprar ahora <span class="small-note">WhatsApp</span>
-            </a>
-        </div>
+        <button class="carousel-arrow carousel-arrow-right">&#10095;</button>
     </div>
+</div>
 
-    <!-- Carrusel central -->
-    <div class="carousel-wrapper">
-        <div class="carousel">
-            <button class="carousel-arrow carousel-arrow-left">&#10094;</button>
-            <div class="carousel-track">
-                <img src="1.jpg" alt="RustDesk 1">
-                <img src="2.png" alt="RustDesk 2">
-                <img src="3.png" alt="RustDesk 3">
-                <img src="4.png" alt="RustDesk 4">
-            </div>
-            <button class="carousel-arrow carousel-arrow-right">&#10095;</button>
-        </div>
+<!-- PRODUCTOS DEBAJO DEL CARRUSEL -->
+<div class="products-section">
+    <div class="product">
+        <h3>Software Ofimático</h3>
+        <p>Soluciones de oficina completas para documentos, hojas de cálculo y presentaciones.</p>
+        <p>Precio Perú: S/. 15 | Chile: $9,500 CLP</p>
+        <a href="https://wa.me/51945482880" target="_blank" class="buy-button">
+            Comprar ahora <span class="small-note">WhatsApp</span>
+        </a>
     </div>
-
-    <!-- Columna derecha -->
-    <div class="products-column">
-        <div class="product">
-            <h3>Software de Diseño y Creatividad</h3>
-            <p>Acceso a herramientas de diseño profesional con suscripción anual para proyectos creativos.</p>
-            <p>Precio Perú: S/. 195 / 1 año | Chile: $69,500 CLP</p>
-            <a href="https://wa.me/51945482880" target="_blank" class="buy-button">
-                Comprar ahora <span class="small-note">WhatsApp</span>
-            </a>
-        </div>
-        <div class="product">
-            <h3>Edición de Video</h3>
-            <p>Programas de edición de video profesionales para crear contenido de calidad.</p>
-            <p>Precio Perú: S/. 20 | Chile: $9,800 CLP</p>
-            <a href="https://wa.me/51945482880" target="_blank" class="buy-button">
-                Comprar ahora <span class="small-note">WhatsApp</span>
-            </a>
-        </div>
-        <div class="product">
-            <h3>Producción Musical</h3>
-            <p>Software para composición, mezcla y edición de audio profesional.</p>
-            <p>Precio Perú: S/. 20 | Chile: $9,500 CLP</p>
-            <a href="https://wa.me/51945482880" target="_blank" class="buy-button">
-                Comprar ahora <span class="small-note">WhatsApp</span>
-            </a>
-        </div>
-        <div class="product">
-            <h3>Suite de Ingeniería y CAD</h3>
-            <p>Herramientas profesionales de diseño y modelado 2D y 3D, suscripción vinculable a tu correo.</p>
-            <p>Precio Perú: S/. 65 / 1 año | S/. 85 / 2 años | Chile: $15,500 / $25,900 CLP</p>
-            <a href="https://wa.me/51945482880" target="_blank" class="buy-button">
-                Comprar ahora <span class="small-note">WhatsApp</span>
-            </a>
-        </div>
-        <div class="product">
-            <h3>Otros Programas Especializados</h3>
-            <p>Disponemos de la mayoría de productos del mercado, consulte por el programa o licencia que necesita.</p>
-            <a href="https://wa.me/51945482880" target="_blank" class="buy-button">
-                Consultar <span class="small-note">WhatsApp</span>
-            </a>
-        </div>
+    <div class="product">
+        <h3>Antivirus</h3>
+        <p>Protección de tus equipos por 1 año contra virus, malware y amenazas online.</p>
+        <p>Precio Perú: S/. 35 | Chile: $15,000 CLP</p>
+        <a href="https://wa.me/51945482880" target="_blank" class="buy-button">
+            Comprar ahora <span class="small-note">WhatsApp</span>
+        </a>
     </div>
-
+    <div class="product">
+        <h3>Gestión de PDF</h3>
+        <p>Edición, creación y conversión de archivos PDF de forma permanente.</p>
+        <p>Precio Perú: S/. 15 | Chile: $9,500 CLP</p>
+        <a href="https://wa.me/51945482880" target="_blank" class="buy-button">
+            Comprar ahora <span class="small-note">WhatsApp</span>
+        </a>
+    </div>
+    <div class="product">
+        <h3>Software de Diseño y Creatividad</h3>
+        <p>Acceso a herramientas de diseño profesional con suscripción anual.</p>
+        <p>Precio Perú: S/. 195 / 1 año | Chile: $69,500 CLP</p>
+        <a href="https://wa.me/51945482880" target="_blank" class="buy-button">
+            Comprar ahora <span class="small-note">WhatsApp</span>
+        </a>
+    </div>
+    <div class="product">
+        <h3>Edición de Video</h3>
+        <p>Programas de edición de video profesionales para crear contenido de calidad.</p>
+        <p>Precio Perú: S/. 20 | Chile: $9,800 CLP</p>
+        <a href="https://wa.me/51945482880" target="_blank" class="buy-button">
+            Comprar ahora <span class="small-note">WhatsApp</span>
+        </a>
+    </div>
+    <div class="product">
+        <h3>Producción Musical</h3>
+        <p>Software para composición, mezcla y edición de audio profesional.</p>
+        <p>Precio Perú: S/. 20 | Chile: $9,500 CLP</p>
+        <a href="https://wa.me/51945482880" target="_blank" class="buy-button">
+            Comprar ahora <span class="small-note">WhatsApp</span>
+        </a>
+    </div>
+    <div class="product">
+        <h3>Suite de Ingeniería y CAD</h3>
+        <p>Herramientas profesionales de diseño y modelado 2D y 3D.</p>
+        <p>Precio Perú: S/. 65 / 1 año | S/. 85 / 2 años | Chile: $15,500 / $25,900 CLP</p>
+        <a href="https://wa.me/51945482880" target="_blank" class="buy-button">
+            Comprar ahora <span class="small-note">WhatsApp</span>
+        </a>
+    </div>
+    <div class="product">
+        <h3>Otros Programas Especializados</h3>
+        <p>Disponemos de la mayoría de productos del mercado, consulte por el programa o licencia que necesita.</p>
+        <a href="https://wa.me/51945482880" target="_blank" class="buy-button">
+            Consultar <span class="small-note">WhatsApp</span>
+        </a>
+    </div>
 </div>
 
 <script>
